--- a/package.json
+++ b/package.json
@@ -5,7 +5,22 @@
   "repository": "git@github.com:william-ks/remake-project-cubos-academy.git",
   "author": "william krisley <will.ks2101@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsup src",
+    "start": "node dist/server",
+    "start:dev": "tsx watch src/server.ts",
+    "test": "vitest",
+    "studio": "prisma studio"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "eslint": "^8.46.0",
@@ -17,6 +32,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1"
   }
