--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "eslint": "^8.46.0",
+    "prettier": "3.0.1",
     "prisma": "^5.1.0",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tsup": "^7.1.0",
     "tsx": "^3.12.7",
